devenv/003_PG_service.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-postgres-service
  namespace: dev
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: dev-postgres
