devenv/005_ilwrapper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ilwrapper-service 
  namespace: dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: ilwrapper
