devenv/005_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ilwrapperingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ilwrap.k3scluster
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ilwrapper-service
              port:
                number: 80
